--- a/mbti_model_reddit.ipynb
+++ b/mbti_model_reddit.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKsQo+0fD6h4XrVD56H0Tp",
+      "authorship_tag": "ABX9TyO1BtP9HXXjpRr9tuKpCtNL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,6 +105,8 @@
       "cell_type": "code",
       "source": [
         "model = joblib.load(\"mbtimodel/mbtimodel.pkl\")\n",
+        "# IMPORTANT: Set up your Reddit credentials and enter them into your Google Colab Secrets\n",
+        "# See Vid for instructions: https://www.youtube.com/watch?v=VAJFZEeKjSY\n",
         "client_id = userdata.get(\"reddit_client_id\")\n",
         "assert client_id is not None\n",
         "client_secret = userdata.get(\"reddit_client_secret\")\n",
